--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "isomorphic javascript presentation",
   "main": "index.js",
   "scripts": {
-    "start": "parallelshell 'npm run server' 'npm run client' 'npm run style:watch'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
-    "client": "webpack-dev-server",
-    "style": "lessc ./app/style/main.less public/style/main.css",
-    "style:watch": "watch 'npm run style' app/style"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:dev": "webpack-dev-server --inline --hot --content-base public/ --history-api-fallback",
+    "start:prod": "npm run build && node server.bundle.js",
+    "build:client": "webpack",
+    "build:server": "webpack --config webpack.server.config.js",
+    "build": "npm run build:client && npm run build:server"
   },
   "author": "Luke Hansell <lukehansell@hotmail.com> (https://twitter.com/luke_hansell)",
   "license": "ISC",
@@ -18,7 +18,7 @@
     "express-handlebars": "^2.0.1",
     "node-jsx": "^0.13.3",
     "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react-router": "^2.7.0",
     "when": "^3.7.3"
   },
   "devDependencies": {
@@ -26,9 +26,19 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.24.0",
+    "ejs": "^2.5.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.3",
+    "if-env": "^1.0.0",
+    "ignore-loader": "^0.1.1",
     "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "nodemon": "^1.10.2",
     "parallelshell": "^2.0.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "style-loader": "^0.13.1",
     "watch": "^0.19.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
