--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:dev": "webpack-dev-server --inline --hot --content-base public/ --history-api-fallback",
     "start:prod": "npm run build && node server.bundle.js",
+    "prestart:prod:dev": "npm run build:server",
+    "start:prod:dev": "parallelshell 'npm run build:server -- --watch' 'npm run build:client -- --watch' 'nodemon server.bundle.js'",
     "build:client": "webpack",
     "build:server": "webpack --config webpack.server.config.js",
     "build": "npm run build:client && npm run build:server"
@@ -14,11 +16,20 @@
   "author": "Luke Hansell <lukehansell@hotmail.com> (https://twitter.com/luke_hansell)",
   "license": "ISC",
   "dependencies": {
+    "@holidayextras/brand-globals": "^1.0.7",
+    "@holidayextras/brand-hx": "^1.2.0",
+    "@holidayextras/ui-toolkit": "^2.2.1",
+    "bootstrap": "^3.3.7",
     "express": "^4.12.3",
     "express-handlebars": "^2.0.1",
+    "hapi-sdk": "git+https://github.com/holidayextras/hapi-sdk.git",
+    "json-loader": "^0.5.4",
+    "lodash": "^4.15.0",
     "node-jsx": "^0.13.3",
     "react": "^0.13.3",
+    "react-bootstrap": "^0.30.3",
     "react-router": "^2.7.0",
+    "react-router-form": "^1.0.2",
     "when": "^3.7.3"
   },
   "devDependencies": {
@@ -29,6 +40,7 @@
     "css-loader": "^0.24.0",
     "ejs": "^2.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "if-env": "^1.0.0",
     "ignore-loader": "^0.1.1",
@@ -39,6 +51,7 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "watch": "^0.19.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
