--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:prod:dev": "parallelshell 'npm run build:server -- --watch' 'npm run build:client -- --watch' 'nodemon server.bundle.js'",
     "build:client": "webpack",
     "build:server": "webpack --config webpack.server.config.js",
-    "build": "npm run build:client && npm run build:server"
+    "build": "npm run build:client && npm run build:server",
+    "test": "mocha-webpack --webpack-config webpack.test.config.js \"app/**/*.test.js\"",
+    "test:watch": "npm test -- --watch"
   },
   "author": "Luke Hansell <lukehansell@hotmail.com> (https://twitter.com/luke_hansell)",
   "license": "ISC",
@@ -28,8 +30,11 @@
     "node-jsx": "^0.13.3",
     "react": "^0.13.3",
     "react-bootstrap": "^0.30.3",
+    "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-form": "^1.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "when": "^3.7.3"
   },
   "devDependencies": {
@@ -37,6 +42,8 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.24.0",
     "ejs": "^2.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -46,6 +53,8 @@
     "ignore-loader": "^0.1.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "mocha": "^3.0.2",
+    "mocha-webpack": "^0.6.0",
     "nodemon": "^1.10.2",
     "parallelshell": "^2.0.0",
     "react": "^15.3.0",
@@ -54,6 +63,7 @@
     "url-loader": "^0.5.7",
     "watch": "^0.19.2",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-node-externals": "^1.3.3"
   }
 }
