--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "parallelshell": "^2.0.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "redux-logger": "^2.6.1",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
